--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
 SanHack Reporting
         </title>
          <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+         <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v2/themes/css/cartodb.css" />
+         <script src="http://libs.cartocdn.com/cartodb.js/v2/cartodb.js"></script>
+         <script src="https://d3voyrscnb0slx.cloudfront.net/cartodb.js/v2/cartodb.js"></script>
+         <script src="http://code.highcharts.com/highcharts.js"></script>
+         <script src="http://code.highcharts.com/modules/exporting.js"></script>
+         <script src="javascript/app.js"></script>
+         <style>
+            .map {height: 380px; width: 100%; margin: 20 0 0 0; padding: 0; border: 12px solid black;}
+            .bar-row {height: 100px; border-bottom: 4px solid black; padding: 0; margin: 0;}
+            .bar-row .chart{height: 100%;}
+            #overview-list {position: relative;}
+            #overview-list .school-block { margin-top: 5px; font-size: 1.5em; font-weight: 700; position: relative; float: left; width: 100%;}
+            #overview-list .phone-block { margin-top: 5px; position: relative; float: left; width: 100%;}
+         </style>
     </head>
-    <body>
+    <body >
 
 <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -35,7 +49,12 @@ SanHack Reporting
 
     <div class="tab">
         <label for="tab-2" id="data"></label>
-        <div class="content"> Maps<br />
+        <div class="content"> 
+          <div class="row-fluid">
+              <div id="map_main" class="span12 map"></div>
+          </div>
+          <div id="overview-list">
+          </div>
         </div>
     </div>
 </div>
