working map and more about\

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ SanHack Reporting
             .about-text{margin-top: 80px; font-family: 'Arvo', serif;
                 font-size: 24px; line-height:36px; text-align: justify;}
             .girls-img{margin-top: 70px;}
-            .group-img{margin-top: 40px;}
+            .group-img{margin-top: 100px;}
             .navbar {height: 30px; margin-bottom: 5px;}
             .brand img{height: 30px; margin: 0; padding: 0;}
             .break {height: 10px; background: black;}
@@ -80,7 +80,8 @@ SanHack Reporting
           <span class="break span12"></span>
           <div class="row-fluid">
               <div class="about-text span6">
-                <p>SchoolTrack was developed over 1 1/2 days as part of the Sanitation Hackathon in NYC. <a href='http://www.sanitationhackathon.org/school-track'>Click here</a> to see more about the project and the our team.
+                <p>Born out of the NYC's Sanitation Hackathon, SchoolTrack is a program designed to track the number of students by gender at schools.  The World Bank requested this application to determine if providing sanitation facilities and menstruation education at schools improves the attendance of girls.
+                </p><p><a href='http://www.sanitationhackathon.org/school-track'>see more</a> 
                  </p>
               </div>
               <img class='span6 group-img' src='img/group.jpg' />
