added a brief description about the actual workflow to the code

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ SanHack Reporting
               Will this increase the number of girls in schools?
                </p><p>
               An SMS-based solution for class representatives to report attendance by gender.
-              Allowing the World Bank to track if their project has an impact on girls’ attendance.</p>
+              Allowing the World Bank to track if their project has an impact on girls’ attendance.</p><p>
+              SchoolTrack is a simple tool for tracking daily attendance SMS texts from known phone numbers. An adminstrator would enter each number, location, and school name into a table, after that, the rest of SchoolTrack works automatically. Allowing administrators to track attendance rates over time. </p>
               </div>
           </div>
           <span class="break span12"></span>
